refactor NewWingDataIterator and NewWingDataIteratorTest